--- a/A16 Ex02 Shahaf 201381076 Liran 201664497/A16 Ex02 Shahaf 201381076 Liran 201664497.csproj
+++ b/A16 Ex02 Shahaf 201381076 Liran 201664497/A16 Ex02 Shahaf 201381076 Liran 201664497.csproj
@@ -53,25 +53,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller.cs" />
-    <Compile Include="FbPlacePageID.cs" />
-    <Compile Include="FbPlaceSearchWrapper.cs" />
+    <Compile Include="FBPlace\FbPlacePageID.cs" />
+    <Compile Include="FBPlace\FbPlaceSearchWrapper.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="GooglePlace.cs" />
-    <Compile Include="GooglePlaceApiWrapper.cs" />
-    <Compile Include="GooglePlacesApiResponse.cs" />
+    <Compile Include="GooglePlaces\GooglePlace.cs" />
+    <Compile Include="GooglePlaces\GooglePlaceApiWrapper.cs" />
+    <Compile Include="GooglePlaces\GooglePlacesApiResponse.cs" />
     <Compile Include="MustLikesStatisticsHourUtils.cs" />
-    <Compile Include="OpeningHours.cs" />
+    <Compile Include="GooglePlaces\OpeningHours.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="CostumControls\StatusComponent.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="UserPostsForDictionary.cs" />
     <EmbeddedResource Include="FormMain.resx">
@@ -109,6 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\DesignedQueMark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Likes.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
