--- a/A16 Ex02 Shahaf 201381076 Liran 201664497/A16 Ex02 Shahaf 201381076 Liran 201664497.csproj
+++ b/A16 Ex02 Shahaf 201381076 Liran 201664497/A16 Ex02 Shahaf 201381076 Liran 201664497.csproj
@@ -85,6 +85,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\FacebookWrapper.ObjectModel.Event.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
