Added a new class Panel to hold 2 labels- PanelfavoriteHour

--- a/A16 Ex02 Shahaf 201381076 Liran 201664497/A16 Ex02 Shahaf 201381076 Liran 201664497.csproj
+++ b/A16 Ex02 Shahaf 201381076 Liran 201664497/A16 Ex02 Shahaf 201381076 Liran 201664497.csproj
@@ -81,6 +81,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="UserPostsForDictionary.cs" />
+    <EmbeddedResource Include="CostumControls\StatusPanel.resx">
+      <DependentUpon>StatusPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
